--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@types/react-dom": "^17.0.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "react-typical": "^0.1.3",
+    "sass": "^1.49.9",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +42,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cz-conventional-changelog": "^3.3.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
