--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
-  "name": "client",
+  "homepage": "https://Aaron-Lin-74.github.io/personal-portfolio",
+  "name": "personal-portfolio",
+  "author": "Aaron Lin",
   "version": "0.1.0",
   "private": true,
+  "description": "My personal portfolio that shows information about my projects, technologies, and a contact me form.",
+  "keywords": [
+    "portfolio",
+    "projects",
+    "resume"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -20,6 +28,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,7 +54,8 @@
     ]
   },
   "devDependencies": {
-    "cz-conventional-changelog": "^3.3.0"
+    "cz-conventional-changelog": "^3.3.0",
+    "gh-pages": "^3.2.3"
   },
   "config": {
     "commitizen": {
